php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #60611 Segmentation fault with Cls::{expr}() syntax
Submitted: 2011-12-27 07:54 UTC Modified: 2011-12-28 04:23 UTC
From: do dot hiroaki at gmail dot com Assigned: laruence (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.4.0RC4 OS: CentOs5.6
Private report: No CVE-ID: None
 [2011-12-27 07:54 UTC] do dot hiroaki at gmail dot com
Description:
------------
Segmentation fault with Cls::{expr}() syntax when expr is not string.

also $cls->{expr}() syntax.

Test script:
---------------
Cls::{0}();
Cls::{1.0}();
Cls::{true}();
Cls::{false}();
Cls::{null}();

$cls->{0}();
$cls->{1.0}();
$cls->{true}();
$cls->{false}();
$cls->{null}();


Expected result:
----------------
Fatal error: Method name must be a string

(Occurred by code "$cls->{0}();" on php5.3)

Actual result:
--------------
Segmentation fault

(each line)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-12-27 08:07 UTC] do dot hiroaki at gmail dot com
sorry. Only "Cls::{1.0}();" result is "Bus error"
 [2011-12-27 08:37 UTC] laruence@php.net
Automatic comment from SVN on behalf of laruence
Revision: http://svn.php.net/viewvc/?view=revision&revision=321429
Log: Fix bug #60611 (Segmentation fault with Cls::{expr}() syntax)
 [2011-12-27 08:38 UTC] laruence@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2011-12-27 08:38 UTC] laruence@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: laruence
 [2011-12-28 04:23 UTC] do dot hiroaki at gmail dot com
Thank you for fix.

Bat segmentation fault occurred yet when run "$cls->{expr}()" without run "Cls::
{expr}();"

I sent new bug report #60613.
 [2012-04-18 09:46 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=20e2db2ce3d553e5dbd70547696e06f2a615377d
Log: Fix bug #60611 (Segmentation fault with Cls::{expr}() syntax)
 [2012-07-24 23:37 UTC] rasmus@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=20e2db2ce3d553e5dbd70547696e06f2a615377d
Log: Fix bug #60611 (Segmentation fault with Cls::{expr}() syntax)
 [2013-11-17 09:34 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=20e2db2ce3d553e5dbd70547696e06f2a615377d
Log: Fix bug #60611 (Segmentation fault with Cls::{expr}() syntax)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC