Fix bug #60611 (Segmentation fault with Cls::{expr}() syntax)